--- a/Index.html
+++ b/Index.html
@@ -8,10 +8,9 @@
     <title>BURGER</title>
   </head>
   <body>
-
-<h1 class="head1">The Best Burger</h1>
-<h2 class="header1">- ever -</h2>
-
+<div class="center">
+  <h1 class="head1">The Best Burger</h1>
+  <h2 class="header1">- ever -</h2>
   <div class="bun"><div class="sezam1"></div>
   <div class="sezam2"></div>
   <div class="sezam3"></div>
@@ -28,6 +27,6 @@
       <div class="salad1"></div>
   <div class="bun1"><div class="price">$ 9.99</div>
         </div>
-
+</div>
   </body>
 </html>
